tm/tests/snapshots/tui_today_render__the_command_line_replaces_the_hint.snap
---
source: tm/tests/tui_today_render.rs
expression: "lines(&[today::hint_line(&app, 120)])"
---
:plan --diff█                                                j/k move · Enter open · e edit · r replan · R sync · ? help
