tm/tests/snapshots/tui_today_render__the_now_pane_with_nothing_running.snap
---
source: tm/tests/tui_today_render.rs
expression: "render_lines(&today::now_lines(&app_at(16, 30), 46), 46)"
---
"ci4 p1 Exercises 5.3–5.5  @m1                 "
"elapsed 6h58m ▐███████████████▌ est 2b ×1.6   "
"next 17:30 dinner · 18:00 Severance S3E4 · 21…"
"                                              "
"d done  x extend  s stop  b break  i interrupt"
"0-5 energy  l location  K skip  n note  Space…"
