tm/tests/snapshots/tui_today_render__the_status_line.snap
---
source: tm/tests/tui_today_render.rs
expression: "lines(&[today::status_line(&app(), 120)])"
---
tm · Mon 2026-09-07 · 10:42 · lounge · wake 06:05 (8h10m) · pred 4 rep 4 ·  ● 1/6 · leak 59m · adherence 50% · window →…
