tm/tests/snapshots/tui_today_render__the_status_line_folds_the_week_in_below_min_width.snap
---
source: tm/tests/tui_today_render.rs
expression: row
---
tm · Mon 2026-09-07 · 10:42 · lounge · wake 06:05 (8h10m) · pred 4…  W37 2/25 · ⚠ a3 · ? 1
