tm/tests/snapshots/tui_today_render__the_timeline_pane.snap
---
source: tm/tests/tui_today_render.rs
expression: "render_lines(&today::timeline_lines(&app(), 38, 14), 38)"
---
"07:00  5 p1 ✓ Read ch.6…  @m3  1b  (6…"
"08:07  5 p1 ✓ Read ch.6   @O1  3b  (6…"
"09:08  ·    ✓ break 20m            (2…"
"09:32  4 p1 ▶ Exercises…  @m1  2b×1.6 "
"11:20  ·      lunch 30m               "
"11:50  4↓p3   Claude Co…  @m2  1b    …"
"12:50  ⏰     Meeting w…       1h     " Hidden by multi-width symbols: [(8, " ")]
"13:50  ·      break 20m               "
"14:10  3 p3   Review th…  @m2  1b     "
"15:10  1 p0 ⚠ Pick up p…       20m   …"
"15:30  ───    window ends 16:00       "
"17:30  ·      dinner 30m              "
"18:00  ○      Severance…       1h     "
"21:30  🌙     wind-down…              " Hidden by multi-width symbols: [(8, " ")]
