tm/tests/snapshots/tui_today_render__the_week_pane.snap
---
source: tm/tests/tui_today_render.rs
expression: "format!(\"{title}\\n{body}\")"
---
Week W37 · 1/25
"  m1 Finish ch.5 exerc…     ░░░░░░ 0/6"
"  m2 Rollback path pas…     ░░░░░░ 0/6"
"▶ m3 Read ch.6              ▓▓░░░░ 2/3"
"  m4 Pick winter cours…     ░░░░░░ 0/2"
"  d1 CS 234 pset 2          ░░░░░░ 0/6"
"  x1 Midterm                ░░░░░░ 0/2"
"──── HOT / overdue ───────────────────"
"⚠ a3 Pick up package · due today      "
"──── Waiting ─────────────────────────"
"? a4 Ask Prof. Lee about the reading …"
"──── Diagnostics ─────────────────────"
"1 underused (4→3) · 0 ci-5 lost       "
"hot: a3                               "
"t5 blocked by t4                      "
"waiting: a4                           "
