tm/tests/snapshots/tui_today_render__the_whole_screen_at_120_columns.snap
---
source: tm/tests/tui_today_render.rs
expression: "render(&app(), 120, 30)"
---
"tm · Mon 2026-09-07 · 10:42 · lounge · wake 06:05 (8h10m) · pred 4 rep 4 ·  ● 2/6 · leak 0m · adherence 75% · window → …"
"    █████████░░░███████▒▒▓▓▓▓▓████░░▓▓▓▓░░        ▒▒▒∙∙∙∙∙          ███                                     ▲ 10:42     "
"    █████████░░████████▒▒▓▓▓▓▓                                                                              plan @07:00 "
"┌ Timeline ──────────────────────────────────┐┌ Now ─────────────────────────────────┐┌ Week W37 · 2/25 ───────────────┐"
"│07:00  5 p1 ✓ Read ch.6 §1–2    @m3  1b  (6…││ci4 p1 Exercises 5.3–5.5  @m1         ││  m1 Finish ch.5…     ░░░░░░ 0/6│"
"│08:07  5 p1 ✓ Read ch.6         @O1  3b  (6…││elapsed 1h10m ▐█████░░░░░░░░░░▌ est 2…││  m2 Rollback pa…     ░░░░░░ 0/6│"
"│09:08  ·    ✓ break 20m                  (2…││next 11:20 lunch · 11:50 Claude Code …││▶ m3 Read ch.6        ▓▓▓▓░░ 3/3│"
"│09:32  4 p1 ▶ Exercises 5.3–5…  @m1  2b×1.6 ││                                      ││  m4 Pick winter…     ░░░░░░ 0/2│"
"│11:20  ·      lunch 30m                     ││d done  x extend  s stop  b break  i …││  d1 CS 234 pset…     ░░░░░░ 0/6│"
"│11:50  4↓p3   Claude Code dra…  @m2  1b    …││0-5 energy  l location  K skip  n not…││  x1 Midterm          ░░░░░░ 0/2│"
"│12:50  ⏰     Meeting w/ host        1h     ││                                      ││──── HOT / overdue ─────────────│" Hidden by multi-width symbols: [(9, " ")]
"│13:50  ·      break 20m                     ││                                      ││⚠ a3 Pick up package · due today│"
"│14:10  3 p3   Review the draf…  @m2  1b     ││                                      ││──── Waiting ───────────────────│"
"│15:10  1 p0 ⚠ Pick up package        20m   …││                                      ││? a4 Ask Prof. Lee about the re…│"
"│15:30  ───    window ends 16:00             ││                                      ││──── Diagnostics ───────────────│"
"│17:30  ·      dinner 30m                    ││                                      ││1 underused (4→3) · 0 ci-5 lost │"
"│18:00  ○      Severance S3E4         1h     ││                                      ││hot: a3                         │"
"│21:30  🌙     wind-down · bed…              ││                                      ││t5 blocked by t4                │" Hidden by multi-width symbols: [(9, " ")]
"│                                            ││                                      ││waiting: a4                     │"
"│                                            ││                                      ││                                │"
"│                                            ││                                      ││                                │"
"│                                            ││                                      ││                                │"
"│                                            ││                                      ││                                │"
"│                                            │└──────────────────────────────────────┘│                                │"
"│                                            │┌ Energy today ────────────────────────┐│                                │"
"│                                            ││pred  4  5  5  4  4  3  3  3  3  3    ││                                │"
"│                                            ││rep   5  5  4  ·  ·  ·  ·  ·  ·  ·    ││                                │"
"│                                            ││     07 08 09 10 11 12 13 14 15 16    ││                                │"
"└────────────────────────────────────────────┘└──────────────────────────────────────┘└────────────────────────────────┘"
":                                                            j/k move · Enter open · e edit · r replan · R sync · ? help"
